[package]
name = "sov-jsonapi-utils"
description = "Utilities for building opinionated JSON APIs according to the Sovereign SDK API guidelines"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["query", "json"] }
derive_more = { workspace = true, default-features = true }
hex = { workspace = true }
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.4", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
serde_with = "3"
tracing = "0.1"
url = "2"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
sov-jsonapi-utils = { path = ".", features = ["arbitrary"] }

[features]
arbitrary = [ "proptest", "proptest-derive", "sov-jsonapi-utils/arbitrary" ]
