[package]
name = "sov-db"
description = "A high-level DB interface for the Sovereign SDK"
license = "Apache-2.0"                                          # This license is inherited from Aptos 
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
# Maintained by sovereign labs
jmt = { workspace = true }
rockbound = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3", features = ["native"] }

# External
anyhow = { workspace = true, default-features = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
async-trait = { workspace = true }
byteorder = { workspace = true, default-features = true }
borsh = { workspace = true, default-features = true, features = ["bytes", "rc"] }
proptest = { workspace = true, optional = true, features = ["std"] }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, default-features = true, features = ["rc"] }
tempfile = { workspace = true, optional = true }
rocksdb = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../adapters/mock-zkvm" }
sov-test-utils = { path = "../../module-system/sov-test-utils" }
sov-prover-storage-manager = { path = "../sov-prover-storage-manager" }
tempfile = { workspace = true }
criterion = "0.5.1"
rand = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }

[features]
arbitrary = [
	"dep:arbitrary",
	"dep:proptest",
	"dep:proptest-derive",
	"dep:tempfile",
	"rockbound/arbitrary",
	"sov-mock-zkvm/arbitrary",
	"sov-rollup-interface/arbitrary",
	"sov-test-utils/arbitrary",
]

[[bench]]
name = "state_db_single_snapshot"
path = "benches/state_db_bench.rs"
harness = false
