[package]
name = "sov-db"
description = "A high-level DB interface for the Sovereign SDK"
license = "Apache-2.0"                                          # This license is inherited from Aptos 
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
# Maintained by sovereign labs
jmt = { workspace = true }
rockbound = { workspace = true }
sov-rollup-interface = { workspace = true, features = ["native"] }

# External
anyhow = { workspace = true, default-features = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
async-trait = { workspace = true }
byteorder = { workspace = true, default-features = true }
borsh = { workspace = true, default-features = true, features = ["bytes", "rc"] }
proptest = { workspace = true, optional = true, features = ["std"] }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, default-features = true, features = ["rc"] }
tempfile = { workspace = true, optional = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
hex = { workspace = true }

[dev-dependencies]
sov-mock-da = { workspace = true, features = ["native"] }
sov-mock-zkvm = { workspace = true }
sov-test-utils = { workspace = true, features = ["demo-stf"] }
tempfile = { workspace = true }
criterion = "0.5.1"
rand = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
arbitrary = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-derive",
    "dep:tempfile",
    "rockbound/arbitrary",
    "sov-mock-zkvm/arbitrary",
    "sov-rollup-interface/arbitrary",
    "sov-test-utils/arbitrary",
]

[[bench]]
name = "state_db_single_snapshot"
path = "benches/state_db_bench.rs"
harness = false
