[package]
name = "sov-ethereum"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
sov-rollup-interface = { path = "../../rollup-interface", features = ["native"] }

sov-evm = { path = "../../module-system/module-implementations/sov-evm" }
demo-stf = { path = "../../examples/demo-rollup/stf", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"] }
sov-accounts = { path = "../../module-system/module-implementations/sov-accounts", features = ["native"] }
sov-eth-dev-signer = { path = "../sov-eth-dev-signer" }

borsh = { workspace = true }
serde = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }

tokio = { workspace = true, features = ["sync"]}
schnellru = "0.2.1"

[dev-dependencies]
proptest = { workspace = true }


[features]
default = []
local = []
