[package]
name = "sov-ledger-apis"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
description = "JSON-RPC server and client implementations for Sovereign SDK rollups"
repository = { workspace = true }

version = { workspace = true }
resolver = "2"
publish = true

[lints]
workspace = true

[dependencies]
# Common dependencies
jsonrpsee = { workspace = true }
tokio = { workspace = true, features = ["macros"]}
borsh = { workspace = true }
serde = "1"
serde_json = "1"
sov-rollup-interface = { path = "../../rollup-interface", features = ["native"], version = "0.3" }
# Client dependencies
# (None)
# Server dependencies
anyhow = { version = "1", optional = true }
axum = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
sov-db = { path = "../sov-db", version = "0.3", optional = true }
sov-jsonapi-utils = { path = "../jsonapi-utils", version = "0.3", optional = true }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"], optional = true, version = "0.3" }
tracing = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"], optional = true }

[dev-dependencies]
axum-server = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
sov-db = { path = "../../full-node/sov-db" }
sov-ledger-apis = { path = ".", features = ["client", "server"] }
sov-ledger-json-client = { path = "../sov-ledger-json-client" }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"], version = "0.3" }
sov-test-utils = { path = "../../module-system/sov-test-utils", features = ["demo-stf"] }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
demo-stf = { path = "../../examples/demo-rollup/stf", features = ["native"], version = "0.3" }

[features]
default = [ "client", "server" ]
server = [
	"anyhow",
	"axum",
	"futures",
	"hex",
	"jsonrpsee/server",
	"serde_with",
	"serde_yaml",
	"sov-db",
	"sov-jsonapi-utils",
	"sov-modules-api",
	"tracing",
	"utoipa",
	"utoipa-swagger-ui",
]
client = [ "jsonrpsee/client", "jsonrpsee/macros" ]
