[package]
name = "sov-ledger-apis"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
description = "JSON-RPC server and client implementations for Sovereign SDK rollups"
repository = { workspace = true }

version = { workspace = true }
resolver = "2"
publish = true

[lints]
workspace = true

[dependencies]
# Common dependencies
jsonrpsee = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
borsh = { workspace = true }
serde = "1"
serde_json = "1"
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"], version = "0.3" }
sov-rollup-interface = { path = "../../rollup-interface", features = ["native"], version = "0.3" }
# Client dependencies
# (None)
# Server dependencies
anyhow = { version = "1", optional = true }
axum = { workspace = true, features = ["http1", "http2", "ws", "json"], optional = true }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
serde_with = { workspace = true, features = ["base64"], optional = true }
sov-db = { path = "../sov-db", version = "0.3", optional = true }
sov-rest-utils = { path = "../sov-rest-utils", version = "0.3", optional = true }
tracing = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"], optional = true }

[dev-dependencies]
assert-json-diff = "2"
axum-server = { workspace = true }
base64 = { workspace = true }
insta = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
sov-db = { path = "../../full-node/sov-db" }
sov-ledger-apis = { path = ".", features = ["client", "server"] }
sov-ledger-json-client = { path = "../sov-ledger-json-client" }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"], version = "0.3" }
sov-test-utils = { path = "../../module-system/sov-test-utils", features = ["demo-stf"] }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
demo-stf = { path = "../../examples/demo-rollup/stf", features = ["native"], version = "0.3" }

[features]
default = [ "client", "server" ]
server = [
	"anyhow",
	"axum",
	"futures",
	"hex",
	"jsonrpsee/server",
	"serde_with",
	"serde_yaml",
	"sov-db",
	"sov-rest-utils",
	"tracing",
	"utoipa-swagger-ui",
]
client = [ "jsonrpsee/client", "jsonrpsee/macros" ]
