[package]
name = "sov-ledger-apis"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
description = "JSON-RPC server and client implementations for Sovereign SDK rollups"
repository = { workspace = true }
version = { workspace = true }
resolver = "2"
publish = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1" }
axum = { workspace = true, features = ["http1", "http2", "ws", "json"] }
borsh = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = "1"
serde_json = "1"
serde_with = { workspace = true, features = ["base64"] }
serde_yaml = { workspace = true }
sov-db = { path = "../sov-db", version = "0.3" }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = [
	"native"
], version = "0.3" }
sov-rest-utils = { path = "../sov-rest-utils", version = "0.3" }
sov-rollup-interface = { path = "../../rollup-interface", features = [
	"native"
], version = "0.3" }
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
assert-json-diff = "2"
axum-server = { workspace = true }
base64 = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
sov-db = { path = "../../full-node/sov-db" }
sov-ledger-json-client = { path = "../sov-ledger-json-client" }
sov-mock-da = { path = "../../adapters/mock-da", features = [
	"native"
], version = "0.3" }
sov-test-utils = { path = "../../module-system/sov-test-utils", features = [
	"demo-stf"
] }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
demo-stf = { path = "../../examples/demo-rollup/stf", features = [
	"native"
], version = "0.3" }
