[package]
name = "sov-prover-storage-manager"
description = "Hierarchical storage manager for prover storage"
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-db = { path = "../sov-db" }
rockbound = { workspace = true }
sov-state = { path = "../../module-system/sov-state", features = ["native"] }
tracing = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../adapters/mock-zkvm", features = ["native"] }
rockbound = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"]}
criterion = "0.5.1"
rand = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "single_thread_storage_bench"
path = "benches/single_thread_progression.rs"
harness = false

[features]
default = []
test-utils = [ "rockbound/test-utils" ]
