[package]
name = "sov-sequencer"
authors = { workspace = true }
description = "A simple implementation of a sequencer for Sovereign SDK rollups"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
dashmap = "5"
derivative = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "server"] }
mini-moka = "0.10"
rockbound = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-modules-api = { path = "../../module-system/sov-modules-api", version = "0.3", features = ["native"] }
sov-modules-stf-blueprint = { path = "../../module-system/sov-modules-stf-blueprint", version = "0.3", features = ["native"] }
sov-state = { path = "../../module-system/sov-state", version = "0.3" }
sov-db = { path = "../sov-db", version = "0.3" }
sov-test-utils = { path = "../../module-system/sov-test-utils", version = "0.3" }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
async-trait = { workspace = true }
rockbound = { workspace = true }
sov-value-setter = { path = "../../module-system/module-implementations/sov-value-setter", features = ["native"] }
sov-rollup-interface = { path = "../../rollup-interface", features = ["native"] }
sov-test-utils = { path = "../../module-system/sov-test-utils" }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-prover-storage-manager = { path = "../../full-node/sov-prover-storage-manager", features = ["test-utils"] }
sov-db = { path = "../sov-db" }
tempfile = { workspace = true }
tokio = { workspace = true }
