[package]
name = "sov-sequencer"
authors = { workspace = true }
description = "A simple implementation of a sequencer for Sovereign SDK rollups"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "http2", "ws", "json", "query"] }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
dashmap = "5"
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "server"] }
mini-moka = "0.10"
rockbound = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
sov-rest-utils = { workspace = true }
sov-rollup-interface = { workspace = true }
sov-modules-api = { workspace = true, features = ["native"] }
sov-modules-stf-blueprint = { workspace = true, features = ["native"] }
sov-state = { workspace = true }
sov-db = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
futures = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
reltester = { workspace = true }
rockbound = { workspace = true }
sov-value-setter = { workspace = true, features = ["native"] }
sov-kernels = { workspace = true, features = ["native"] }
sov-rollup-interface = { workspace = true }
sov-sequencer-json-client = { workspace = true }
sov-test-utils = { workspace = true }
sov-mock-da = { workspace = true, features = ["native"] }
sov-mock-zkvm = { workspace = true }
sov-prover-storage-manager = { workspace = true, features = ["test-utils"] }
sov-db = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
