[package]
name = "sov-stf-runner"
authors = { workspace = true }
description = "Runs Sovereign SDK rollups and their verifiers"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["tokio", "http1", "http2"], optional = true }
derivative = { workspace = true, optional = true }
num_cpus = { workspace = true }
thiserror = { workspace = true, optional = true }
borsh = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
strum = { version = "0.26", features = ["derive"], optional = true }
toml = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"], optional = true }
tokio = { workspace = true, optional = true , features = ["net", "sync", "rt-multi-thread", "time"]}
hex = { workspace = true }
tracing = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
sov-db = { path = "../sov-db", version = "0.3", optional = true }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-metrics = { path = "../sov-metrics" }

[dev-dependencies]
backon = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }

sov-sequencer-registry = { path = "../../module-system/module-implementations/sov-sequencer-registry", features = ["native"] }
sov-bank = { path = "../../module-system/module-implementations/sov-bank", features = ["native"] }
sov-modules-stf-blueprint = { path = "../../module-system/sov-modules-stf-blueprint", features = ["native"] }

sov-accounts = { path = "../../module-system/module-implementations/sov-accounts", features = ["native"] }
sov-celestia-adapter = { path = "../../adapters/celestia", features = ["native"] }
sov-sequencer = { path = "../sov-sequencer" }

sov-state = { path = "../../module-system/sov-state", features = ["native"] }
sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"] }
sov-stf-runner = { path = ".", features = ["mock"] }

sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../adapters/mock-zkvm", features = ["native"] }
sov-prover-storage-manager = { path = "../sov-prover-storage-manager", features = ["test-utils"] }

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = { workspace = true, features = ["test-util", "macros"]}


[features]
default = []
mock = [ "native" ]
native = [
	"async-trait",
	"axum",
	"derivative",
	"futures",
	"jsonrpsee",
	"rayon",
	"sov-accounts/native",
	"sov-bank/native",
	"sov-celestia-adapter/native",
	"sov-db",
	"sov-metrics/native",
	"sov-mock-da/native",
	"sov-mock-zkvm/native",
	"sov-modules-api/native",
	"sov-modules-stf-blueprint/native",
	"sov-rollup-interface/native",
	"sov-sequencer-registry/native",
	"sov-state/native",
	"sov-stf-runner/native",
	"strum",
	"thiserror",
	"tokio",
	"toml",
	"tracing",
]
