[package]
name = "sov-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }

sov-modules-api = { path = "../sov-modules-api", version = "0.3" }
sov-bank = { path = "../module-implementations/sov-bank" }
sov-accounts = { path = "../module-implementations/sov-accounts" }
sov-nonces = { path = "../module-implementations/sov-nonces" }
sov-sequencer-registry = { path = "../module-implementations/sov-sequencer-registry" }
sov-prover-incentives = { path = "../module-implementations/sov-prover-incentives" }

[lints]
workspace = true

[features]
default = []
native = [
    "sov-accounts/native",
    "sov-bank/native",
    "sov-modules-api/native",
    "sov-nonces/native",
    "sov-prover-incentives/native",
    "sov-sequencer-registry/native",
]
