[package]
name = "sov-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sov_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
sov-modules-api = { path = "../sov-modules-api", version = "0.3", features = ["native"] }
sov-bank = { path = "../module-implementations/sov-bank", version = "0.3", features = ["native"] }
sov-nonces = { path = "../module-implementations/sov-nonces", version = "0.3", features = ["native"] }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-ledger-json-client = { path = "../../full-node/sov-ledger-json-client", version = "0.3" }
directories = "5.0.1"
anyhow = { workspace = true }
hex = { workspace = true, features = ["serde"] }
borsh = { workspace = true }
semver = "1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }

[dev-dependencies]
tempfile = { workspace = true }
demo-stf = { path = "../../examples/demo-rollup/stf", features = ["native"] }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-test-utils = { path = "../sov-test-utils" }
