[package]
name = "sov-modules-api"
description = "Defines the interface of the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
jsonrpsee = { workspace = true, optional = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
sov-state = { path = "../sov-state", version = "0.3" }
sov-modules-core = { path = "../sov-modules-core", version = "0.3" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-modules-macros = { path = "../sov-modules-macros", version = "0.3", optional = true }
risc0-cycle-macros = { workspace = true, optional = true }
serde = { workspace = true }
borsh = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
bech32 = { workspace = true, default-features = true }
derive_more = { workspace = true, default-features = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true }
clap = { workspace = true, optional = true }
schemars = { workspace = true, optional = true, features = [] }

# The risc0 patch only applies to version 2.0.0 exactly.
rand = { workspace = true, optional = true }

risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
tempfile = { workspace = true }
sov-modules-api = { path = ".", features = ["native"] }
sov-modules-core = { path = "../sov-modules-core", features = ["mocks"] }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-test-utils = { path = "../sov-test-utils" }
sov-bank = { path = "../module-implementations/sov-bank", features = ["native"] }
sov-db = { path = "../../full-node/db/sov-db" }
sov-prover-storage-manager = { path = "../../full-node/sov-prover-storage-manager", features = ["test-utils"] }

[features]
arbitrary = [
	"dep:arbitrary",
	"dep:proptest",
	"dep:proptest-derive",
	"proptest/default",
	"sov-db/arbitrary",
	"sov-modules-api/arbitrary",
	"sov-modules-core/arbitrary",
	"sov-rollup-interface/arbitrary",
	"sov-state/arbitrary",
	"sov-test-utils/arbitrary",
]
bench = [
	"risc0-cycle-macros",
	"risc0-cycle-macros?/bench",
	"risc0-zkvm",
	"risc0-zkvm-platform",
	"sov-modules-api/bench",
	"sov-state/bench",
]
default = [ "macros" ]
native = [
	"clap",
	"jsonrpsee",
	"macros",
	"rand",
	"schemars",
	"serde_json",
	"sov-bank/native",
	"sov-mock-da/native",
	"sov-modules-api/native",
	"sov-modules-core/native",
	"sov-modules-macros/native",
	"sov-rollup-interface/native",
	"sov-state/native",
]
macros = [ "sov-modules-macros" ]
