[package]
name = "sov-modules-api"
description = "Defines the interface of the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
jsonrpsee = { workspace = true, optional = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
derive_more = { workspace = true, default-features = true }
sov-jsonapi-utils = { path = "../../full-node/jsonapi-utils", version = "0.3", optional = true }
sov-state = { path = "../sov-state", version = "0.3" }
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-modules-macros = { path = "../sov-modules-macros", version = "0.3", optional = true }
sov-db = { path = "../../full-node/sov-db", optional = true }
risc0-cycle-macros = { workspace = true, optional = true }
serde = { workspace = true }
borsh = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
sha2 = { workspace = true }
bech32 = { workspace = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true }
clap = { workspace = true, optional = true }
schemars = { workspace = true, features = [], optional = true }
derivative = { workspace = true }

risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
tempfile = { workspace = true }
sov-mock-da = { path = "../../adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../../adapters/mock-zkvm", features = ["native"] }
sov-bank = { path = "../module-implementations/sov-bank", features = ["native"] }
sov-prover-storage-manager = { path = "../../full-node/sov-prover-storage-manager", features = ["test-utils"] }
sov-modules-api = { path = ".", features = ["mocks", "test-utils"] }

[features]
arbitrary = [
	"dep:arbitrary",
	"dep:proptest",
	"dep:proptest-derive",
	"proptest/default",
	"sov-db/arbitrary",
	"sov-jsonapi-utils/arbitrary",
	"sov-mock-zkvm/arbitrary",
	"sov-modules-api/arbitrary",
	"sov-rollup-interface/arbitrary",
	"sov-state/arbitrary",
]
bench = [
	"risc0-cycle-macros",
	"risc0-cycle-macros?/bench",
	"risc0-zkvm",
	"risc0-zkvm-platform",
	"sov-modules-api/bench",
	"sov-state/bench",
]
default = [ "macros" ]
native = [
	"async-trait",
	"axum",
	"clap",
	"jsonrpsee",
	"macros",
	"schemars",
	"serde_json",
	"sov-bank/native",
	"sov-db",
	"sov-jsonapi-utils",
	"sov-mock-da/native",
	"sov-mock-zkvm/native",
	"sov-modules-api/native",
	"sov-modules-macros/native",
	"sov-rollup-interface/native",
	"sov-state/native",
	"tokio",
]
macros = [ "sov-modules-macros" ]
mocks = []
test-utils = []
