[package]
name = "sov-modules-macros"
description = "Macros for use with the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
autotests = false

[lints]
workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/integration/main.rs"

[dependencies]
anyhow = { workspace = true }
bech32 = { workspace = true }
blake2 = "0.10"
convert_case = "0.6"
darling = "0.14"
derive_more = "0.99"
hex = { workspace = true }
prettier-please = { version = "0.1", default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
# @preston-evans98 has audited the diff of serde_jsonc against serde_json as of this commit.
serde_jsonc = { git =  "https://github.com/nathanhammond/serde_jsonc.git", rev = "ebcbf97064fed7d034798bd0e7c5b2090f2def38"}
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
borsh = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "macros", "server"] }
schemars = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
trybuild = "1.0"

sov-modules-api = { path = "../sov-modules-api" }
sov-rollup-interface = { path = "../../rollup-interface" }
sov-state = { path = "../sov-state" }
sov-bank = { path = "../module-implementations/sov-bank", features = ["native"] }
sov-modules-macros = { path = ".", features = ["native"] }
sov-test-utils = { path = "../sov-test-utils" }

[features]
default = []
native = [
	"sov-bank/native",
	"sov-modules-api/native",
	"sov-modules-macros/native",
	"sov-rollup-interface/native",
	"sov-state/native",
]
