[package]
name = "sov-modules-rollup-blueprint"
description = "This crate contains abstractions needed to create a new rollup"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
readme = "README.md"
resolver = "2"
publish = true

[lints]
workspace = true

[dependencies]
sov-rollup-interface = { path = "../../rollup-interface", features = ["native"], version = "0.3" }
sov-stf-runner = { path = "../../full-node/sov-stf-runner", features = ["native"], version = "0.3", optional = true }
sov-state = { path = "../sov-state", version = "0.3" }

sov-modules-api = { path = "../../module-system/sov-modules-api", features = ["native"], version = "0.3" }
sov-cli = { path = "../../module-system/sov-cli", optional = true }

sov-modules-stf-blueprint = { path = "../../module-system/sov-modules-stf-blueprint", features = ["native"], version = "0.3" }
sov-db = { path = "../../full-node/sov-db", version = "0.3", optional = true }

sov-sequencer = { path = "../../full-node/sov-sequencer", optional = true }
sov-ledger-apis = { path = "../../full-node/sov-ledger-apis", features = ["server"], optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["trace", "compression-gzip", "propagate-header", "set-header", "cors"], optional = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync"], optional = true }

[features]
default = [ "native" ]
native = [
	"async-trait",
	"serde_json",
	"sov-cli",
	"sov-db",
	"sov-ledger-apis",
	"sov-modules-api/native",
	"sov-modules-stf-blueprint/native",
	"sov-rollup-interface/native",
	"sov-sequencer",
	"sov-state/native",
	"sov-stf-runner",
	"sov-stf-runner?/native",
	"tokio",
	"tower-http",
]
