[package]
name = "sov-modules-stf-blueprint"
description = "Defines a generic state transition function for use with the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
hex = { workspace = true }

sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-state = { path = "../sov-state", version = "0.3" }
sov-modules-core = { path = "../sov-modules-core", version = "0.3" }
sov-modules-api = { path = "../sov-modules-api", version = "0.3" }
risc0-cycle-macros = { git = "https://github.com/Sovereign-Labs/risc0-cycle-macros.git", rev="0110643f00b", optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"], optional = true }
sov-chain-state = { path = "../module-implementations/sov-chain-state" }
sov-blob-storage = { path = "../module-implementations/sov-blob-storage" }

[features]
bench = ["risc0-cycle-macros", "risc0-zkvm", "risc0-zkvm-platform"]
default = []
native = ["sov-state/native", "sov-modules-api/native", "jsonrpsee", "sov-chain-state/native", "sov-blob-storage/native"]
test-utils = []
